salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/BL_Performance_Metrics__c.object-meta.xml
<CustomObject>
    <description>Tracks Business Lead performance metrics including Time to Ramp, Closed Won ACV, and fiscal period summaries. Updated weekly via scheduled Apex.</description>
    <label>BL Performance Metrics</label>
    <nameField>
        <displayFormat>BLM-{0000}</displayFormat>
        <label>Metrics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BL Performance Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>