salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active BLs are included in scheduled metric calculations</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>