salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota__c</fullName>
    <description>Annual ACV quota target for this BL</description>
    <label>Annual Quota</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>