salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Avg_Monthly_Productivity__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Productivity__c</fullName>
    <description>Average monthly closed won ACV. Calculated as Fiscal YTD ACV / months elapsed in fiscal year.</description>
    <label>Avg Monthly Productivity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>