salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Business_Lead__c.field-meta.xml
<CustomField>
    <fullName>Business_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Business Lead (sales rep) this metrics record tracks</description>
    <label>Business Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BL_Performance_Metrics</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <unique>true</unique>
</CustomField>