salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Commit_Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Snapshot_Date__c</fullName>
    <description>Date when the quarterly commit snapshot was captured. Used to track when the frozen value was taken.</description>
    <inlineHelpText>Date when the commit snapshot was captured at quarter start.</inlineHelpText>
    <label>Commit Snapshot Date</label>
    <type>Date</type>
</CustomField>