salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Days_to_Ramp__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Ramp__c</fullName>
    <description>Number of days from Start Date to Ramp Achieved Date. Calculated by scheduled Apex.</description>
    <label>Days to Ramp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>