salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Fiscal_YTD_ACV__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_YTD_ACV__c</fullName>
    <description>Sum of Closed Won ACV since the start of the current fiscal year (Feb 1). Updated weekly by scheduled Apex.</description>
    <label>Fiscal YTD ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>