salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Is_Ramped__c.field-meta.xml
<CustomField>
    <fullName>Is_Ramped__c</fullName>
    <description>TRUE if Total Closed Won ACV >= Ramp Milestone</description>
    <formula>Total_Closed_Won_ACV__c >= Ramp_Milestone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ramped</label>
    <type>Checkbox</type>
</CustomField>