salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated__c</fullName>
    <description>Timestamp of when metrics were last calculated by the scheduled Apex job</description>
    <label>Last Calculated</label>
    <type>DateTime</type>
</CustomField>