salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Months_Since_Start__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Start__c</fullName>
    <description>Number of months since BL start date. Used for ramp tracking.</description>
    <formula>IF(Start_Date__c != null, (TODAY() - Start_Date__c) / 30.44, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Since Start</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>