salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Pod__c.field-meta.xml
<CustomField>
    <fullName>Pod__c</fullName>
    <description>Regional pod assignment (US or EU)</description>
    <label>Pod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>