salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Productivity_vs_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Productivity_vs_Benchmark__c</fullName>
    <description>Percentage of avg monthly productivity vs $350K benchmark. 100% = at benchmark.</description>
    <formula>IF(Avg_Monthly_Productivity__c != null &amp;&amp; Avg_Monthly_Productivity__c > 0,
  (Avg_Monthly_Productivity__c / 350000) * 100,
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity vs Benchmark (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>