salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Quarterly_Commit_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Commit_Snapshot__c</fullName>
    <description>Frozen sum of ACV from all opportunities where BL Quarterly Commit = true at the time of snapshot. Captured at quarter start via manual Apex script.</description>
    <inlineHelpText>Total committed ACV frozen at quarter start. Does not change as deals evolve.</inlineHelpText>
    <label>Quarterly Commit Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>