salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Quota_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Quota_Attainment__c</fullName>
    <description>YTD ACV as percentage of Annual Quota</description>
    <formula>IF(Annual_Quota__c &gt; 0, Fiscal_YTD_ACV__c / Annual_Quota__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>