salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Ramp_Achieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Achieved_Date__c</fullName>
    <description>Date when the BL first hit the Ramp Milestone. Set automatically by scheduled Apex.</description>
    <label>Ramp Achieved Date</label>
    <type>Date</type>
</CustomField>