salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Ramp_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Milestone__c</fullName>
    <defaultValue>2000000</defaultValue>
    <description>Target ACV milestone to be considered fully ramped (default $2M)</description>
    <label>Ramp Milestone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>