salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Ramp_Progress__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Progress__c</fullName>
    <description>Progress toward $2M ramp milestone as percentage. 100% = fully ramped.</description>
    <formula>IF(Ramp_Milestone__c != null &amp;&amp; Ramp_Milestone__c > 0,
  MIN((Total_Closed_Won_ACV__c / Ramp_Milestone__c) * 100, 100),
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ramp Progress (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>