salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Ramp_Status__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Status__c</fullName>
    <description>Current ramp status: Ramping (0-6 months), Mature (6+ months or hit $2M milestone)</description>
    <formula>IF(Is_Ramped__c, "Mature - Hit Milestone",
  IF(Months_Since_Start__c >= 6, "Mature - 6+ Months",
  IF(Months_Since_Start__c >= 3, "Ramping - Month " &amp; TEXT(CEILING(Months_Since_Start__c)),
  "Ramping - Early"
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ramp Status</label>
    <type>Text</type>
</CustomField>