salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date the BL started in their sales role (for Time to Ramp calculation)</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>