salesforce/force-app/main/default/objects/BL_Performance_Metrics__c/fields/Total_Closed_Won_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Won_ACV__c</fullName>
    <description>Sum of ACV from all Closed Won opportunities (Stage 6. Closed(Won)) owned by this BL</description>
    <label>Total Closed Won ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>